vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app.kubernetes.io/name: vikunja
spec:
  selector:
    app.kubernetes.io/name: vikunja
  ports:
    - name: http
      port: 80
      targetPort: http
